Fixed Input size in Mobile View

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,10 @@ footer{
         font-size: 12px; 
     }
 
+    input[type='text'] {
+        width: 100%; 
+    }
+
     nav{
         flex-direction: column;
     }
